changed the z-index to properly reflect overflow issues from the header and footer. Changed opacity of header and footer backgrounds to read more smoothly when scrolling through the page.

--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -55,9 +55,9 @@ header {
   margin: 0em;
   padding 10em;
   width: 100%;
-  background-color: rgba(255, 255, 255, .6);
+  background-color: rgba(255, 255, 255, .8);
   text-indent: 4em;
-  z-index: 1;
+  z-index: 10;
 }
 
 navbar {
@@ -71,18 +71,17 @@ footer {
   bottom: 0em;
   left: 0em;
   width: 100%;
-  background-color: rgba(255, 255, 255, .6);
+  background-color: rgba(255, 255, 255, .8);
   text-indent: 4em;
   font-family: bodyfont;
   color: #00004d;
-  z-index: 2;
+  z-index: 9;
 }
 
 div.container {
   position:absolute;
   top: 12em;
   left: 6em;
-  overflow: hidden;
   z-index: 3;
 }
 
@@ -90,4 +89,8 @@ article {
   font-family: bodyfont;
   font-size: 20px;
   color: #00004d;
+}
+
+figure {
+
 }
